--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "graph build",
     "create-local": "graph create dasconnor/inzamamshakir --node http://127.0.0.1:8020",
     "deploy-local": "graph deploy dasconnor/inzamamshakir --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy": "graph deploy dasconnor/ping --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
+    "deploy": "graph deploy inzamamshakir/ping --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /inzamamshakir --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy graphprotocol/inzamamshakir --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
   },
